# GeoScriptHub

./: .gitignore  CONTRIBUTING.md  README.md  savannah_debug.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-python.yml  ci-typescript.yml
output_hires_austin/: building_footprints.geojson  canopy_mask.tif  sar_db.tif  sar_edges.tif  species_map.tif
outputs/: run_log.txt  run_log2.txt
outputs/austin_landcover/accuracy/: .gitkeep
outputs/austin_landcover/change_detection/: .gitkeep
outputs/austin_landcover/landcover_annual/: .gitkeep
outputs/austin_landcover/models/: .gitkeep
outputs/coast/: coast_test_buildings.csv  coast_test_buildings.geojson  coast_test_coherence_proxy.tif  coast_test_confidence.tif  coast_test_cross_pol_entropy.tif  coast_test_footprints.csv  coast_test_footprints.geojson  coast_test_ndbi.tif  coast_test_ndvi.tif  coast_test_optical.tif  coast_test_pol_ratio.tif  coast_test_probability.tif  coast_test_sar_anomaly.tif  coast_test_seasonal_inv.tif  coast_test_stability.tif  coast_test_texture.tif
outputs/hires_savannah/: attribute_profile.tif  building_footprints.geojson  canopy_mask.tif  sar_db.tif  sar_edges.tif  species_map.tif
outputs/houston/: houston_test_footprints.csv  houston_test_pol_ratio.tif  houston_test_stability.tif  houston_test_texture.tif
outputs/quantum_flood/: confidence_bounds.tif  fema_flood_zones.geojson  flood_frequency.tif  flood_zones.tif  interactive_flood_map.html
outputs/quantum_flood_v3_test/: confidence_bounds.tif  fema_flood_zones.geojson  flood_frequency.tif  flood_zones.tif  interactive_flood_map.html
outputs/quantum_flood_v4/: confidence_bounds.tif  flood_frequency.tif  flood_zones.tif  gauge_validation.csv  interactive_flood_map.html  pipeline_flowchart.html  pipeline_status.json
outputs/washington/: wa_test_buildings.csv  wa_test_buildings.geojson  wa_test_coherence_proxy.tif  wa_test_confidence.tif  wa_test_cross_pol_entropy.tif  wa_test_footprints.csv  wa_test_footprints.geojson  wa_test_ndbi.tif  wa_test_ndvi.tif  wa_test_optical.tif  wa_test_pol_ratio.tif  wa_test_probability.tif  wa_test_sar_anomaly.tif  wa_test_seasonal_inv.tif  wa_test_stability.tif  wa_test_texture.tif
research/: geospatial-data-methods-report.md
shared/python/: __init__.py  base_tool.py  exceptions.py  validators.py
tools/gee/ndwi-flood-frequency/: README.md  (+1 more)
tools/python/batch-coordinate-transformer/: README.md  pyproject.toml
tools/python/batch-coordinate-transformer/src/batch_coord_transformer/: __init__.py  cli.py  transformer.py
tools/python/batch-coordinate-transformer/tests/: test_transformer.py
tools/python/batch-geocoder/: README.md  pyproject.toml
tools/python/batch-geocoder/src/batch_geocoder/: __init__.py  cli.py  geocoder.py
tools/python/batch-geocoder/tests/: test_geocoder.py
tools/python/deep-fusion-landcover/: README.md  pipeline_architecture.html  pyproject.toml  pyrightconfig.json
tools/python/deep-fusion-landcover/src/deep_fusion_landcover/: __init__.py  __main__.py  accuracy.py  acquisition.py  aoi.py  change_detection.py  cli.py  cnn_encoder.py  constants.py  ensemble.py  feature_engineering.py  flowchart.py  lidar_processor.py  mosaic.py  preprocessing.py  quantum_classifier.py  sam_segmenter.py  sub_canopy_detector.py  temporal_compositing.py  viz.py
tools/python/deep-fusion-landcover/tests/: conftest.py  test_aoi.py  test_change_detection.py  test_ensemble.py  test_quantum_classifier.py
tools/python/hires-building-canopy-detector/: README.md  demo_test.py  pyproject.toml  savannah_test.py
tools/python/hires-building-canopy-detector/src/hires_detector/: __init__.py  analysis.py  aoi.py  cli.py  export.py  fetcher.py
tools/python/hires-building-canopy-detector/tests/: test_analysis.py
tools/python/landcover-change-detector/: pipeline_flowchart.html  pyproject.toml
tools/python/landcover-change-detector/src/landcover_change/: __init__.py  __main__.py  accuracy.py  acquisition.py  aoi.py  change_detection.py  cli.py  constants.py  feature_engineering.py  flowchart.py  preprocessing.py  quantum_classifier.py  sar_processor.py  terrain.py  viz.py
tools/python/landcover-change-detector/tests/: conftest.py  test_accuracy.py  test_change_detection.py  test_classification.py
tools/python/osm-change-monitor/: README.md  pyproject.toml
tools/python/osm-change-monitor/src/osm_change_monitor/: __init__.py  cli.py  monitor.py  scheduler.py
tools/python/osm-change-monitor/tests/: test_monitor.py
tools/python/quantum-flood-frequency/: README.md  pipeline_architecture.html  pyproject.toml  pyrightconfig.json
tools/python/quantum-flood-frequency/src/quantum_flood_frequency/: __init__.py  __main__.py  acquisition.py  aoi.py  cli.py  fema.py  flood_engine.py  gauge_data.py  model_optimization.py  mosaic.py  preprocessing.py  quantum_classifier.py  sar_processor.py  status_flowchart.py  super_resolution.py  terrain.py  tiled_pipeline.py  viz.py
tools/python/quantum-flood-frequency/tests/: conftest.py  test_accuracy.py  test_quantum_flood.py  test_v2_features.py
tools/python/raster-band-stats/: README.md  pyproject.toml
tools/python/raster-band-stats/src/raster_band_stats/: __init__.py  cli.py  stats.py
tools/python/raster-band-stats/tests/: test_stats.py
tools/python/spectral-index-calculator/: README.md  pyproject.toml
tools/python/spectral-index-calculator/src/spectral_index_calculator/: __init__.py  calculator.py  cli.py
tools/python/spectral-index-calculator/tests/: test_calculator.py
tools/python/sub-canopy-detector/: README.md  coast_test.py  houston_test.py  notebook.ipynb  pyproject.toml  pyrightconfig.json  wa_test.py
tools/python/sub-canopy-detector/outputs/houston/: houston_test_confidence.tif  houston_test_footprints.geojson  houston_test_ndbi.tif  houston_test_ndvi.tif  houston_test_optical.tif  houston_test_probability.tif  houston_test_sar_anomaly.tif
tools/python/sub-canopy-detector/src/sub_canopy_detector/: __init__.py  analysis.py  aoi.py  export.py  fetcher.py  viz.py
tools/python/sub-canopy-detector/tests/: test_analysis.py
(+93 files in other folders)
