[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hires-detector"
version = "1.0.0"
description = "High-resolution building footprint + tree canopy detector using Capella SAR & NAIP optical imagery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "GeoScriptHub"}]
keywords = ["SAR", "capella", "NAIP", "building-detection", "tree-canopy", "species-classification", "remote-sensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "matplotlib>=3.7",
    "xarray>=2023.1",
    "pystac>=1.8",
    "pystac-client>=0.7",
    "planetary-computer>=0.5",
    "scikit-image>=0.21",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
