[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "landcover-change-detector"
version = "1.0.0"
description = "Quantum-enhanced multi-sensor land-cover change detection (1990–present) at 30 m aggregate resolution."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "GeoScriptHub" }]

dependencies = [
    # STAC / Planetary Computer
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "stackstac>=0.5",
    # Raster I/O
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "numpy>=1.26",
    "dask[array]>=2024.1",
    "rasterio>=1.3",
    # Vector I/O
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "shapely>=2.0",
    # ML / AI
    "scikit-learn>=1.4",
    "scipy>=1.12",
    # Image processing
    "scikit-image>=0.22",
    # Visualisation
    "matplotlib>=3.8",
    "folium>=0.16",
    "branca>=0.7",
    "Pillow>=10.0",
    # CRS
    "pyproj>=3.6",
    # HTTP
    "requests>=2.31",
    # CLI
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
export = ["playwright>=1.40"]

[project.scripts]
landcover-change-detector = "landcover_change.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/landcover_change"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
