[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-flood-frequency"
version = "2.0.0"
description = "Pseudo-quantum hybrid AI flood frequency mapper with super-resolution upsampling, fusing Landsat, Sentinel-2, and NAIP imagery at 10 m resolution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # STAC / Planetary Computer
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "stackstac>=0.5",

    # Raster I/O and array processing
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "numpy>=1.26",
    "dask[array]>=2024.1",
    "rasterio>=1.3",

    # Vector I/O
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "shapely>=2.0",

    # ML / AI / Quantum-inspired
    "scikit-learn>=1.4",
    "scipy>=1.12",

    # Image processing
    "scikit-image>=0.22",

    # Visualization
    "matplotlib>=3.8",
    "folium>=0.16",
    "branca>=0.7",
    "Pillow>=10.0",

    # Coordinate reference systems
    "pyproj>=3.6",

    # FEMA flood zone data
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "numpy>=1.26",
]
onnx = [
    "onnxruntime>=1.17",
    "skl2onnx>=1.16",
]

[project.scripts]
quantum-flood-frequency = "quantum_flood_frequency.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_flood_frequency"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "B", "SIM"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
