[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoscripthub-raster-band-stats"
version = "1.0.0"
description = "Compute per-band statistics for GeoTIFF rasters and export to JSON or CSV"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.11"

authors = [{ name = "matthew-lottly" }]

keywords = ["gis", "raster", "geotiff", "landsat", "sentinel", "rasterio", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "rasterio>=1.3",
    "numpy>=1.26",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
geo-raster-stats = "src.raster_band_stats.cli:main"

[project.urls]
"Homepage" = "https://github.com/matthew-lottly/GeoScriptHub"
"Source" = "https://github.com/matthew-lottly/GeoScriptHub/tree/main/tools/python/raster-band-stats"
"Bug Tracker" = "https://github.com/matthew-lottly/GeoScriptHub/issues"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "PLC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
