[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectral-index-calculator"
version = "0.1.0"
description = "Compute NDVI, NDWI, SAVI, EVI from satellite band GeoTIFFs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "matthew-lottly" }]
keywords = ["gis", "remote-sensing", "ndvi", "spectral-index", "rasterio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rasterio>=1.3",
    "numpy>=1.26",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.scripts]
geo-spectral = "spectral_index_calculator.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/spectral_index_calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
