[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sub-canopy-detector"
version = "1.0.0"
description = "Detect sub-canopy structures from Sentinel-1 SAR and Sentinel-2 optical imagery via Planetary Computer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # STAC / Planetary Computer
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "stackstac>=0.5",

    # Raster I/O and array processing
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "numpy>=1.26",
    "dask[array]>=2024.1",

    # Vector I/O
    "geopandas>=0.14",
    "pyogrio>=0.7",      # handles Shapefile, GeoPackage, FGDB, GeoJSON, etc.
    "shapely>=2.0",

    # Geocoding
    "geopy>=2.4",

    # Image processing
    "scikit-image>=0.22",
    "scipy>=1.12",

    # Visualization
    "matplotlib>=3.8",
    "folium>=0.16",
    "branca>=0.7",
    "Pillow>=10.0",

    # Coordinate reference systems
    "pyproj>=3.6",

    # Notebook display
    "ipywidgets>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "numpy>=1.26",
]

[project.scripts]
sub-canopy-detector = "sub_canopy_detector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sub_canopy_detector"]
